<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:text="@string/tieude"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="50sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tenvieclam"
            android:textSize="20sp" />

        <AutoCompleteTextView 
            android:id="@+id/edtTenvl"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:hint="Tên việc làm"
            android:textSize="20sp" />
         
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tentp"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/edtTenTP"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:hint="Tên thành phố"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnTimKiem"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70sp"
            android:layout_marginRight="70sp"
            android:layout_marginTop="20dp"
            android:background="#FF9900"
            android:text="@string/btntk"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/btnCongViec"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:text="@string/btncvct"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="20sp" />
    </LinearLayout>


</LinearLayout>